--- a/src/main/resources/view/HelpWindow.css
+++ b/src/main/resources/view/HelpWindow.css
@@ -1,13 +1,17 @@
-#copyButton, #helpMessage {
+#helpMessage {
+    -fx-text-fill: black;
+}
+
+#copyButton {
     -fx-text-fill: white;
 }
 
 #copyButton {
-    -fx-background-color: dimgray;
+    -fx-background-color: #23a1d1;
 }
 
 #copyButton:hover {
-    -fx-background-color: gray;
+    -fx-background-color: #229ac8;
 }
 
 #copyButton:armed {
@@ -15,5 +19,5 @@
 }
 
 #helpMessageContainer {
-    -fx-background-color: derive(#1d1d1d, 20%);
+    -fx-background-color: white;
 }
