--- a/src/main/resources/view/MainWindow.fxml
+++ b/src/main/resources/view/MainWindow.fxml
@@ -3,6 +3,7 @@
 <?import java.net.URL?>
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.Scene?>
+<?import javafx.scene.control.Label?>
 <?import javafx.scene.control.Menu?>
 <?import javafx.scene.control.MenuBar?>
 <?import javafx.scene.control.MenuItem?>
@@ -13,63 +14,95 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.stage.Stage?>
 
-<fx:root minHeight="600" minWidth="450" onCloseRequest="#handleExit" title="Address App" type="javafx.stage.Stage" xmlns="http://javafx.com/javafx/null" xmlns:fx="http://javafx.com/fxml/1">
-  <icons>
-    <Image url="@/images/address_book_32.png" />
-  </icons>
-  <scene>
-    <Scene>
-      <stylesheets>
-        <URL value="@LightTheme.css" />
-        <URL value="@Extensions.css" />
-      </stylesheets>
+<fx:root minHeight="600" minWidth="450" onCloseRequest="#handleExit" title="Address App"
+         type="javafx.stage.Stage" xmlns="http://javafx.com/javafx/17"
+         xmlns:fx="http://javafx.com/fxml/1">
+    <icons>
+        <Image url="@/images/address_book_32.png"/>
+    </icons>
+    <scene>
+        <Scene>
+            <stylesheets>
+                <URL value="@LightTheme.css"/>
+                <URL value="@Extensions.css"/>
+            </stylesheets>
 
-      <VBox>
-            <HBox prefHeight="0.0" prefWidth="85.0" style="-fx-background-color: #397DAE;">
-               <children>
-                  <ImageView fx:id="logo" fitHeight="32.0" fitWidth="216.0" preserveRatio="true" VBox.vgrow="NEVER">
-                     <image>
-                        <Image url="@../images/Logo.png" />
-                     </image>
-                  </ImageView>
-                 <MenuBar fx:id="menuBar" VBox.vgrow="NEVER">
-                 <Menu mnemonicParsing="false" text="File">
-                  <MenuItem mnemonicParsing="false" onAction="#handleExit" text="Exit" />
-                </Menu>
-                <Menu mnemonicParsing="false" text="Help">
-                  <MenuItem fx:id="helpMenuItem" mnemonicParsing="false" onAction="#handleHelp" text="Help" />
-                </Menu>
-                     <Menu mnemonicParsing="false" text="Theme">
-                       <items>
-                         <MenuItem fx:id="lightModeMenuItem" mnemonicParsing="false" onAction="#setLightMode" text="Light Mode" />
-                           <MenuItem fx:id="darkModeMenuItem" mnemonicParsing="false" onAction="#setDarkMode" text="Dark Mode" />
-                       </items>
-                     </Menu>
-              </MenuBar>
-               </children>
-            </HBox>
+            <VBox>
+                <HBox prefHeight="0.0" prefWidth="85.0" style="-fx-background-color: #397DAE;">
+                    <children>
+                        <ImageView fx:id="logo" fitHeight="32.0" fitWidth="216.0"
+                                   preserveRatio="true" VBox.vgrow="NEVER">
+                            <image>
+                                <Image url="@../images/Logo.png"/>
+                            </image>
+                        </ImageView>
+                        <MenuBar fx:id="menuBar" VBox.vgrow="NEVER">
+                            <Menu mnemonicParsing="false" text="File">
+                                <MenuItem mnemonicParsing="false" onAction="#handleExit"
+                                          text="Exit"/>
+                            </Menu>
+                            <Menu mnemonicParsing="false" text="Theme">
+                                <items>
+                                    <MenuItem fx:id="lightModeMenuItem" mnemonicParsing="false"
+                                              onAction="#setLightMode" text="Light Mode"/>
+                                    <MenuItem fx:id="darkModeMenuItem" mnemonicParsing="false"
+                                              onAction="#setDarkMode" text="Dark Mode"/>
+                                </items>
+                            </Menu>
+                            <Menu mnemonicParsing="false" text="Help">
+                                <MenuItem fx:id="helpMenuItem" mnemonicParsing="false"
+                                          onAction="#handleHelp" text="Help"/>
+                            </Menu>
+                        </MenuBar>
+                    </children>
+                </HBox>
 
-        <StackPane fx:id="commandBoxPlaceholder" styleClass="pane-with-border" VBox.vgrow="NEVER">
-          <padding>
-            <Insets bottom="5" left="10" right="10" top="5" />
-          </padding>
-        </StackPane>
+                <StackPane fx:id="commandBoxPlaceholder" styleClass="pane-with-border"
+                           VBox.vgrow="NEVER">
+                    <padding>
+                        <Insets bottom="5" left="10" right="10" top="5"/>
+                    </padding>
+                </StackPane>
 
-        <StackPane fx:id="resultDisplayPlaceholder" maxHeight="100" minHeight="100" prefHeight="100" styleClass="pane-with-border" VBox.vgrow="NEVER">
-          <padding>
-            <Insets bottom="5" left="10" right="10" top="5" />
-          </padding>
-        </StackPane>
+                <StackPane fx:id="resultDisplayPlaceholder" maxHeight="100" minHeight="100"
+                           prefHeight="100" styleClass="pane-with-border" VBox.vgrow="NEVER">
+                    <padding>
+                        <Insets bottom="5" left="10" right="10" top="5"/>
+                    </padding>
+                </StackPane>
 
-        <VBox fx:id="personList" minWidth="340" prefWidth="340" styleClass="pane-with-border" VBox.vgrow="ALWAYS">
-          <padding>
-            <Insets bottom="10" left="10" right="10" top="10" />
-          </padding>
-          <StackPane fx:id="personListPanelPlaceholder" VBox.vgrow="ALWAYS" />
-        </VBox>
+                <HBox HBox.hgrow="ALWAYS" VBox.vgrow="ALWAYS">
+                    <VBox fx:id="personList" minWidth="340" prefWidth="340"
+                          styleClass="pane-with-border" VBox.vgrow="ALWAYS" HBox.hgrow="ALWAYS">
+                        <padding>
+                            <Insets bottom="10" left="10" right="10" top="10"/>
+                        </padding>
+                        <HBox alignment="CENTER_LEFT" HBox.hgrow="ALWAYS">
+                            <children>
+                                <Label fx:id="numberStudents" styleClass="cell_big_label" text="#number"/>
+                                <Label styleClass="cell_big_label" text=" Students"/>
+                            </children>
+                        </HBox>
+                        <StackPane fx:id="personListPanelPlaceholder" VBox.vgrow="ALWAYS"/>
+                    </VBox>
 
-        <StackPane fx:id="statusbarPlaceholder" VBox.vgrow="NEVER" />
-      </VBox>
-    </Scene>
-  </scene>
+                    <VBox fx:id="courseList" minWidth="340" prefWidth="340"
+                          styleClass="pane-with-border" VBox.vgrow="ALWAYS" HBox.hgrow="ALWAYS">
+                        <padding>
+                            <Insets bottom="10" left="10" right="10" top="10"/>
+                        </padding>
+                        <HBox alignment="CENTER_LEFT" HBox.hgrow="ALWAYS">
+                            <children>
+                                <Label fx:id="numberCourses" styleClass="cell_big_label" text="#number"/>
+                                <Label styleClass="cell_big_label" text=" Courses"/>
+                            </children>
+                        </HBox>
+                        <StackPane fx:id="courseListPanelPlaceholder" VBox.vgrow="ALWAYS"/>
+                    </VBox>
+                </HBox>
+
+                <StackPane fx:id="statusbarPlaceholder" VBox.vgrow="NEVER"/>
+            </VBox>
+        </Scene>
+    </scene>
 </fx:root>
