--- a/src/main/resources/view/PersonListCard.fxml
+++ b/src/main/resources/view/PersonListCard.fxml
@@ -12,7 +12,7 @@
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.layout.VBox?>
 
-<HBox id="cardPane" fx:id="cardPane" xmlns="http://javafx.com/javafx/null" xmlns:fx="http://javafx.com/fxml/1">
+<HBox id="cardPane" fx:id="cardPane" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1">
   <GridPane HBox.hgrow="ALWAYS">
     <columnConstraints>
       <ColumnConstraints hgrow="SOMETIMES" minWidth="10" prefWidth="150" />
@@ -31,20 +31,16 @@
         <Label fx:id="name" styleClass="cell_big_label" text="\$first" />
       </HBox>
       <FlowPane fx:id="tags" />
-         <HBox prefHeight="0.0" prefWidth="116.0">
+        <HBox prefHeight="0.0" prefWidth="78.0">
             <children>
-                <HBox prefHeight="0.0" prefWidth="78.0">
-                    <children>
-                        <ImageView fitHeight="17.0" fitWidth="17.0" pickOnBounds="true" preserveRatio="true">
-                            <image>
-                                <Image url="@../images/phone_icon.png" />
-                            </image>
-                        </ImageView>
-                        <Label fx:id="phone" styleClass="cell_small_label" text="\$phone" translateX="3.0" />
-                    </children>
-                </HBox>
+                <ImageView fitHeight="17.0" fitWidth="17.0" pickOnBounds="true" preserveRatio="true">
+                    <image>
+                        <Image url="@../images/phone_icon.png" />
+                    </image>
+                </ImageView>
+                <Label fx:id="phone" styleClass="cell_small_label" text="\$phone" translateX="3.0"/>
             </children>
-         </HBox>
+        </HBox>
          <HBox prefHeight="0.0" prefWidth="78.0">
             <children>
                <ImageView fitHeight="17.0" fitWidth="17.0" pickOnBounds="true" preserveRatio="true">
