Fix bugs in FeedbackWindow and HelpWindow not adhering to light and dark mode themes

--- a/src/main/resources/view/FeedbackWindow.fxml
+++ b/src/main/resources/view/FeedbackWindow.fxml
@@ -16,7 +16,7 @@
     <scene>
         <Scene>
             <stylesheets>
-                <URL value="@FeedbackWindow.css" />
+                <URL value="@FeedbackWindowLight.css" />
             </stylesheets>
 
             <HBox alignment="CENTER" fx:id="feedbackMessageContainer">
