--- a/docs/_sass/minima/custom-variables.scss
+++ b/docs/_sass/minima/custom-variables.scss
@@ -29,6 +29,7 @@ $success:       $green !default;
 $info:          $cyan !default;
 $warning:       $yellow !default;
 $danger:        $red !default;
+$tip:           $indigo !default;
 $light:         $gray-100 !default;
 $dark:          $gray-800 !default;
 
@@ -39,6 +40,7 @@ $theme-colors: (
   "info":       $info,
   "warning":    $warning,
   "danger":     $danger,
+  "tip":        $tip,
   "light":      $light,
   "dark":       $dark
 ) !default;
