--- a/docs/_sass/minima/custom-variables.scss
+++ b/docs/_sass/minima/custom-variables.scss
@@ -27,9 +27,9 @@ $primary:       $blue !default;
 $secondary:     $gray-600 !default;
 $success:       $green !default;
 $info:          $cyan !default;
-$warning:       $yellow !default;
+$warning:       $red !default;
 $danger:        $red !default;
-$tip:           $indigo !default;
+$tip:           $yellow !default;
 $light:         $gray-100 !default;
 $dark:          $gray-800 !default;
 
