--- a/docs/_sass/minima/_base.scss
+++ b/docs/_sass/minima/_base.scss
@@ -288,7 +288,7 @@ table {
     text-align: center;
   }
   .site-header:before {
-    content: "NUSCourseMates";
+    content: "NUSCoursemates";
     font-size: 32px;
   }
 }
